# CubeMap

./: cubemap.js  index.html  test.js  viewer.js
cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  Utils.hpp  cmake_install.cmake  main.cpp
hotspots/: 1.json  2.json  Balcony.json  Frontdoor.json  Goinside.json
